--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -11,6 +11,10 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
+    <nav>
+        <a href="{{ path('app_homepage') }}">Home</a>
+        <a href="{{ path('app_article_crud_index') }}">Articles Crud</a>
+    </nav>
     This friendly message is coming from:
     <ul>
         <li>Your controller at <code>D:/WEB2024/PHP/Symfony/EntitySymG2/src/Controller/HomepageController.php</code></li>
