--- a/templates/article_crud/index.html.twig
+++ b/templates/article_crud/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Article index{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Article index</h1>
 
     <table class="table">
@@ -40,4 +41,5 @@
     </table>
 
     <a href="{{ path('app_article_crud_new') }}">Create new</a>
+</div>
 {% endblock %}
