--- a/templates/article_crud/edit.html.twig
+++ b/templates/article_crud/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit Article{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Edit Article</h1>
 
     {{ include('article_crud/_form.html.twig', {'button_label': 'Update'}) }}
@@ -10,4 +11,5 @@
     <a href="{{ path('app_article_crud_index') }}">back to list</a>
 
     {{ include('article_crud/_delete_form.html.twig') }}
+</div>
 {% endblock %}
