--- a/templates/article_crud/new.html.twig
+++ b/templates/article_crud/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Article{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Create new Article</h1>
 
     {{ include('article_crud/_form.html.twig') }}
 
     <a href="{{ path('app_article_crud_index') }}">back to list</a>
+</div>
 {% endblock %}
