--- a/templates/article_crud/show.html.twig
+++ b/templates/article_crud/show.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Article{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Article</h1>
 
     <table class="table">
@@ -39,4 +40,5 @@
     <a href="{{ path('app_article_crud_edit', {'id': article.id}) }}">edit</a>
 
     {{ include('article_crud/_delete_form.html.twig') }}
+
 {% endblock %}
